kubernetes/apps/networking/traefik/add-ons/error-pages/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`)
      # match: HostRegexp(`${SECRET_DOMAIN}`, `{subdomain:[a-z]+}.${SECRET_DOMAIN}`)
      # Enable auth middleware
      middlewares:
        - name: crowdsec-traefik-bouncer
        # - name: crowdsec-traefik-bouncer
      priority: 1 # lowest priority
      services:
        - name: error-pages
          namespace: networking
          port: 8080
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
